# origin

./: Диаграмма без названия.drawio
Lesson 1/Task 1/: main.cpp
Lesson 1/Task 2/: CMakeLists.txt  main.cpp
Lesson 1/Task 3/: main.cpp
Lesson 2/Task 1/: in.txt  main.cpp
Lesson 2/Task 2/: main.cpp
Lesson 3/Task 1/: main.cpp
Lesson 3/Task 2/: main.cpp
Lesson 3/task 3/: main.cpp
Lesson 4/Task 1/: main.cpp
Lesson 4/Task 2/: main.cpp
Lesson 5/Task 1/: CMakeLists.txt  func.cpp  main.cpp  math_f.h
Lesson 5/Task 2/: CMakeLists.txt  Counter.cpp  func.cpp  main.cpp
Lesson 5/Task 3/: CMakeLists.txt  Figure.cpp  Quadrangle.cpp  Quadrangle.h  Triangle.cpp  Triangle.h  equilTriangle.h  isosTriangle.cpp  isosTriangle.h  parallelogram.cpp  rectangle.h  rightTriangle.cpp  square.cpp  square.h
Lesson 6/Task 1/: CMakeLists.txt  Function.cpp  Function.h  main.cpp
Lesson 6/Task 2/: Figure.h  Triangle.cpp  equilTriangle.cpp  isosTriangle.cpp  isosTriangle.h  main.cpp  parallelogram.cpp  parallelogram.h  rectangle.cpp  rhomb.cpp  rhomb.h  rightTriangle.h  square.h
Lesson 6/task 2/: CMakeLists.txt  main.cpp
Lesson 7/Task 1/: main.cpp
Lesson 7/Task 2/: main.cpp
